Thu Jan  4 12:24:33 CET 2018
	Fix __clang_major__ related warnings for non-clang
	compilers reported by Tim on the mailinglist. -CG

Mon Dec 11 17:11:00 MSK 2017
	Fixed tests on platforms with huge number of CPUs.
	Doxygen configuration was updated.
	Various doxygen fixes. -EG

Mon Dec 07 21:08:00 MSK 2017
	Releasing GNU libmicrohttpd 0.9.58. -EG

Mon Dec 07 16:01:00 MSK 2017
	Fixed HTTPS tests on modern platforms. -EG

Mon Dec 04 15:43:00 MSK 2017
	Minor documentation installation fixes. -EG

Mon Nov 27 22:58:38 CET 2017
	Tolerate AF_UNIX when trying to determine our binding port
	from socket.  Use `sockaddr_storage` instead of trying to
	guess the sockaddr type before calling getsockname(). -CG

Mon Nov 27 22:24:00 MSK 2017
	Releasing GNU libmicrohttpd 0.9.57. -EG

Mon Nov 27 21:36:00 MSK 2017
	Updated README. -EG

Mon Nov 27 18:37:00 MSK 2017
	Corrected names in W32 DLL resources.
	Reordered and clarified configure summary message.
	Additional compiler warning mutes for builds with various configure
	parameters.
	Fixed tests on Cygwin.
	Used larger SETSIZE for Cygwin (same value as for native W32).
	Minor fixes for Cygwin.
	Added configure parameter to force disable usage of sendfile().
	Minor testsuite fixes.
	Really fixed builds with optimisation for size. -EG

Sat Nov 25 18:37:00 MSK 2017
	Fixed build with optimisation for size. -EG

Fri Nov 24 20:14:02 CET 2017
	Releasing GNU libmicrohttpd 0.9.56. -CG

Thu Nov 23 17:40:00 MSK 2017
	Added MHD_FEATURE_SENDFILE enum value and report. -EG

Thu Nov 23 08:56:00 MSK 2017
	Fixed receiving large requests in TLS mode with epoll.
	Improved GnuTLS and libgcrypt detection in configure, do not ignore
	flags in GNUTLS_{CFLAGS,LIBS} variables.
	Added special trick for Solaris/Openindiana to find GnuTLS-3 with
	right bitness.
	Added support for Solaris sendfile(3) function.
	Fixed dataraces with thread ID on W32 and pthread. Now check for
	correct thread in MHD_queue_response() works correctly.